force-app/main/default/objects/Ship_To_Addresses__c/Ship_To_Addresses__c.object-meta.xml
<CustomObject>
    <label>Ship To Address</label>
    <nameField>
        <displayFormat>STA-{0000}</displayFormat>
        <label>Shipping Addresses</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ship To Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>