force-app/main/default/objects/Ship_To_Addresses__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <filterItems>
            <field>Account.Diaper_Bank_Member_Type__c</field>
            <operation>equals</operation>
            <value>&quot;APS only&quot;</value>
        </filterItems>
        <filterItems>
            <field>Account.Diaper_Bank_Member_Type__c</field>
            <operation>equals</operation>
            <value>&quot;Sustaining&quot;</value>
        </filterItems>
        <filterItems>
            <field>Account.Diaper_Bank_Member_Type__c</field>
            <operation>equals</operation>
            <value>&quot;Certified&quot;</value>
        </filterItems>
        <filterItems>
            <field>Account.Diaper_Bank_Member_Type__c</field>
            <operation>equals</operation>
            <value>&quot;Established&quot;</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ship To Addresses</relationshipLabel>
    <relationshipName>Alternatives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>