force-app/main/default/objects/Ship_To_Addresses__c/fields/Active_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Active Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>