force-app/main/default/objects/Ship_To_Addresses__c/fields/APS_Member_Type__c.field-meta.xml
<CustomField>
    <fullName>APS_Member_Type__c</fullName>
    <formula>IF(ISPICKVAL(Account__r.APS_Member_Type__c, &quot;Activated&quot;), &quot;Activated&quot;, IF(ISPICKVAL(Account__r.APS_Member_Type__c, &quot;Allied Member&quot;), &quot;Allied Member&quot;, &quot;Left Network&quot;))</formula>
    <label>APS Member Type</label>
    <type>Text</type>
</CustomField>