force-app/main/default/objects/Ship_To_Addresses__c/fields/Backup_Delivery_Contact__c.field-meta.xml
<CustomField>
    <fullName>Backup_Delivery_Contact__c</fullName>
    <label>Backup Delivery Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>