force-app/main/default/objects/Ship_To_Addresses__c/fields/Backup_Person_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Backup_Person_s_Email__c</fullName>
    <label>Backup Person&apos;s Email</label>
    <length>40</length>
    <type>Text</type>
</CustomField>