force-app/main/default/objects/Ship_To_Addresses__c/fields/Backup_Person_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Backup_Person_s_Phone__c</fullName>
    <label>Backup Person&apos;s Phone</label>
    <type>Phone</type>
</CustomField>