force-app/main/default/objects/Ship_To_Addresses__c/fields/Bay_Fits_53_ft_Truck__c.field-meta.xml
<CustomField>
    <fullName>Bay_Fits_53_ft_Truck__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Bay Fits 53 ft Truck</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>