force-app/main/default/objects/Ship_To_Addresses__c/fields/Delivery_Contact_for_trucker_to_call__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact_for_trucker_to_call__c</fullName>
    <label>Delivery Contact (for trucker to call)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>