force-app/main/default/objects/Ship_To_Addresses__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks record as inactive and enters Inactive date</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>