force-app/main/default/objects/Ship_To_Addresses__c/fields/Inactive_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactive_End_Date__c</fullName>
    <label>Inactive End Date</label>
    <type>Date</type>
</CustomField>