force-app/main/default/objects/Ship_To_Addresses__c/fields/Loading_Dock_or_Forklift__c.field-meta.xml
<CustomField>
    <fullName>Loading_Dock_or_Forklift__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Loading Dock or Forklift</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>