force-app/main/default/objects/Ship_To_Addresses__c/fields/NDBN_Member_Type__c.field-meta.xml
<CustomField>
    <fullName>NDBN_Member_Type__c</fullName>
    <formula>IF( ISPICKVAL( Account__r.Diaper_Bank_Member_Type__c, &quot;APS only&quot;), &quot;APS only&quot;, If(ISPICKVAL( Account__r.Diaper_Bank_Member_Type__c, &quot;Sustaining&quot;), &quot;Sustaining&quot;, If(ISPICKVAL( Account__r.Diaper_Bank_Member_Type__c, &quot;Certified&quot;), &quot;Certified&quot;,&quot;Established&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NDBN Member Type</label>
    <type>Text</type>
</CustomField>