force-app/main/default/objects/Ship_To_Addresses__c/fields/Preferred_or_Qualifying_Ship_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Preferred_or_Qualifying_Ship_to_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only 1 Address can be selected as the Preferred Address for a Member. All other Preferred Addresses must be de-selected.</inlineHelpText>
    <label>Preferred or Qualifying Ship-to Address?</label>
    <type>Checkbox</type>
</CustomField>