force-app/main/default/objects/Ship_To_Addresses__c/fields/Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country__c</fullName>
    <defaultValue>&quot;United States&quot;</defaultValue>
    <label>Shipping Country</label>
    <length>31</length>
    <type>Text</type>
</CustomField>