force-app/main/default/objects/Ship_To_Addresses__c/fields/Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State__c</fullName>
    <label>Shipping State</label>
    <length>21</length>
    <required>true</required>
    <type>Text</type>
</CustomField>