force-app/main/default/objects/Ship_To_Addresses__c/fields/Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Street__c</fullName>
    <label>Shipping Street</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>