force-app/main/default/objects/Ship_To_Addresses__c/fields/Space_in_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Space_in_Sq_Ft__c</fullName>
    <label>Space in Sq Ft</label>
    <length>6</length>
    <type>Text</type>
</CustomField>