force-app/main/default/objects/Ship_To_Addresses__c/fields/Storage_Space_Type__c.field-meta.xml
<CustomField>
    <fullName>Storage_Space_Type__c</fullName>
    <label>Storage Space Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Commercial/business storage space</fullName>
            </value>
            <value>
                <fullName>Consumer/container storage space</fullName>
            </value>
            <value>
                <fullName>Residential space</fullName>
            </value>
            <value>
                <fullName>Warehouse with loading bay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>