force-app/main/default/objects/Ship_To_Addresses__c/validationRules/Cannot_mark_inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_mark_inactive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Inactive__c = TRUE, Preferred_or_Qualifying_Ship_to_Address__c =TRUE)</errorConditionFormula>
    <errorDisplayField>Inactive__c</errorDisplayField>
    <errorMessage>Must Make another record Preferred Address before Inactivating this record.</errorMessage>
</ValidationRule>