force-app/main/default/objects/Ship_To_Addresses__c/listViews/Truckload_Eligible_All_Active_Addresses.listView-meta.xml
<ListView>
    <fullName>Truckload_Eligible_All_Active_Addresses</fullName>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Preferred_or_Qualifying_Ship_to_Address__c</columns>
    <columns>Account__c</columns>
    <columns>Shipping_Street__c</columns>
    <columns>Shipping_City__c</columns>
    <columns>Shipping_State__c</columns>
    <columns>NAME</columns>
    <columns>Storage_Space_Type__c</columns>
    <columns>Bay_Fits_53_ft_Truck__c</columns>
    <columns>Loading_Dock_or_Forklift__c</columns>
    <columns>Inactive__c</columns>
    <columns>Inactive_End_Date__c</columns>
    <columns>Member_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>notContain</operation>
        <value>a11,a12</value>
    </filters>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Active Addresses</label>
</ListView>